--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+#version: "3.9"
 
 services:
   web:
@@ -8,3 +8,38 @@ services:
     command: python manage.py runserver 0.0.0.0:8080
     volumes:
       - .:/code # Replicate local changes to the container
+
+    depends_on:
+      db:
+        condition: service_healthy
+
+    restart: always
+
+
+
+  db:
+    image: postgres:15
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_DB: ctr-combustible
+    ports:
+      - "5432:5432"
+
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+
+    restart: always
+
+    volumes:
+      #- pg_data:/var/lib/postgresql/data
+      - ../data:/var/lib/postgresql/data
+
+
+volumes:
+  pg_data:
+    
+
